--- a/backend/services/infra/k8s/auth-depl.yaml
+++ b/backend/services/infra/k8s/auth-depl.yaml
@@ -2,8 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: auth-depl
-  labels:
-    app: auth
+  # labels:
+  #   app: auth
 spec:
   replicas: 1
   selector:
