--- a/backend/services/auth/package.json
+++ b/backend/services/auth/package.json
@@ -21,6 +21,7 @@
     "drizzle-kit": "^0.24.2",
     "drizzle-orm": "^0.33.0",
     "express": "^4.21.0",
+    "express-validator": "^7.2.0",
     "pg": "^8.12.0",
     "uuid": "^10.0.0"
   },
